# game_of_life

./: .gitignore  CMakeLists.txt  main.cpp
